# OTUS_HW5

./: .env_sample  .gitignore  Makefile  README.md  pyproject.toml
src/otus_hw5/: api.py  scoring.py  store.py
tests/integration/: test_integration_redis.py
tests/unit/: redis_mock.py  test.bak  test_api.py  test_scoring.py  test_store.py
